<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Bookodemia</string>
    <string name="password">password</string>
    <string name="contrase_a">Contraseña</string>
    <string name="todav_a_no_tienes_una_cuenta_reg_strate">¿Todavía no tienes una cuenta? Regístrate</string>
    <string name="bienvenido">¡Bienvenido!</string>
    <string name="correo">Correo</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="title">title</string>
    <string name="logo">logo</string>
    <string name="regresar">Regresar</string>
    <string name="estas_a_unos_cuantos_pasos_de_vivir_la_mejor_experiencia">Estas a unos cuantos pasos de vivir la mejor experiencia</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="registra_tu_informaci_n">Registra tu información</string>
    <string name="usuario">Usuario</string>
    <string name="todo1" tools:ignore="DuplicateDefinition">TODO4</string>
    <string name="todo2" tools:ignore="DuplicateDefinition">TODO1</string>
    <string name="banner">banner</string>
    <string name="title_activity_home">home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="name">name</string>
    <string name="ferlima">FerLima</string>
    <string name="hola2" tools:ignore="DuplicateDefinition">Hola</string>
    <string name="hola" tools:ignore="DuplicateDefinition">Hola2</string>
    <string name="libros">Libros</string>
    <string name="categorias">Categorias</string>
    <string name="autores">Autores</string>
    <string name="todo" tools:ignore="DuplicateDefinition">TODO3</string>
    <string name="m_s_populares">Más populares</string>
    <string name="reci_n_agregadas">Recién agregadas</string>
    <string name="categoria">Categoria</string>
    <string name="setdesc">TODO</string>
    <string name="title_activity_detalle">detalle</string>



</resources>