<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gris1"
    tools:context=".home">



  <ImageView
      android:id="@+id/imageView4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="320dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:srcCompat="@drawable/banner"
      tools:layout_editor_absoluteX="0dp"
      tools:ignore="ContentDescription,MissingConstraints"
      android:contentDescription="@string/todo" />

  <TextView
      android:id="@+id/textView6"
      android:layout_width="83dp"
      android:layout_height="37dp"
      android:layout_marginStart="24dp"
      android:layout_marginTop="40dp"
      android:contentDescription="@string/hola"
      android:fontFamily="@font/abeezee"
      android:lineSpacingExtra="14sp"
      android:text="@string/hola"
      android:textColor="@color/azul2"
      android:textSize="34sp"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/textView7"
      android:layout_width="183dp"
      android:layout_height="49dp"
      android:layout_marginStart="24dp"
      android:layout_marginTop="4dp"
      android:contentDescription="@string/name"
      android:lineSpacingExtra="24sp"
      android:text="@string/ferlima"
      android:textColor="@color/azul1"
      android:textSize="34sp"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView6" />

  <TextView
      android:id="@+id/textView8"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="@font/abeezee"
      android:text="@string/m_s_populares"
      android:textColor="@color/azul2"
      android:textSize="20sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.21" />

  <TextView
      android:id="@+id/textView12"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="4dp"
      android:fontFamily="@font/abeezee"
      android:text="@string/reci_n_agregadas"
      android:textColor="@color/azul2"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.067"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/constraintLayout"
      android:layout_width="412dp"
      android:layout_height="161dp"
      android:layout_marginTop="12dp"
      app:layout_constraintBottom_toBottomOf="@+id/imageView4"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView8"
      app:layout_constraintVertical_bias="0.163">

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="361dp"
        android:layout_height="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/libro_1"
        tools:ignore="ContentDescription,MissingConstraints"
        tools:layout_editor_absoluteX="-156dp"
        android:contentDescription="TODO" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="310dp"
        android:layout_height="122dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.589"
        app:srcCompat="@drawable/libro2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-53dp" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:srcCompat="@drawable/libro_1" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="366dp"
        android:layout_height="119dp"
        android:layout_marginStart="124dp"
        app:layout_constraintStart_toStartOf="@+id/imageView11"
        app:srcCompat="@drawable/libro2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="27dp" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="347dp"
        android:layout_height="101dp"
        app:srcCompat="@drawable/libro_1"
        tools:layout_editor_absoluteX="222dp"
        tools:layout_editor_absoluteY="36dp"
        tools:ignore="MissingConstraints" />
  </androidx.constraintlayout.widget.ConstraintLayout>

  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/constraintLayout2"
      android:layout_width="413dp"
      android:layout_height="89dp"
      android:layout_marginTop="12dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.145"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

    <androidx.cardview.widget.CardView
        android:layout_width="320dp"
        android:layout_height="49dp"
        app:cardCornerRadius="9dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="horizontal">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_weight="1"
            android:fontFamily="@font/abeezee"
            android:text="@string/libros"
            android:textAlignment="center"
            android:textColor="@color/azul1" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_weight="1"
            android:fontFamily="@font/abeezee"
            android:text="@string/categorias"
            android:textAlignment="center"
            android:textColor="@color/azul1" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_weight="1"
            android:fontFamily="@font/abeezee"
            android:text="@string/autores"
            android:textAlignment="center"
            android:textColor="@color/azul1" />
      </LinearLayout>
    </androidx.cardview.widget.CardView>
  </androidx.constraintlayout.widget.ConstraintLayout>

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="423dp"
      android:layout_height="246dp"
      android:layout_marginTop="4dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView12"
      app:layout_constraintVertical_bias="0.0">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="393dp"
        android:layout_height="93dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:cardCornerRadius="9dp"
        tools:layout_editor_absoluteY="56dp"
        tools:ignore="MissingConstraints">

      <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView19"
            android:layout_width="40dp"
            android:layout_height="26dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/imageView18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.941"
            app:srcCompat="@drawable/ic_chevron_right"
            android:contentDescription="@string/setdesc" />

        <ImageView
            android:id="@+id/imageView18"
            android:layout_width="35dp"
            android:layout_height="23dp"
            app:layout_constraintEnd_toStartOf="@+id/imageView17"
            app:srcCompat="@drawable/ic_share_alt"
            tools:layout_editor_absoluteY="62dp"
            android:contentDescription="TODO" />

        <ImageView
            android:id="@+id/imageView17"
            android:layout_width="32dp"
            android:layout_height="22dp"
            app:srcCompat="@drawable/ic_heart"
            tools:layout_editor_absoluteX="345dp"
            tools:layout_editor_absoluteY="63dp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Titulo"
            tools:layout_editor_absoluteX="94dp"
            tools:layout_editor_absoluteY="8dp" />

        <ImageView
            android:id="@+id/imageView16"
            android:layout_width="94dp"
            android:layout_height="77dp"
            app:layout_constraintEnd_toStartOf="@+id/textView14"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/libro_1"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="8dp" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="byAutor"
            android:textColor="@color/gris1"
            android:textSize="10sp"
            app:layout_constraintTop_toBottomOf="@+id/textView14"
            tools:ignore="TextContrastCheck"
            tools:layout_editor_absoluteX="94dp" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="48dp"
            android:layout_height="15dp"
            android:layout_marginTop="16dp"
            android:text="@string/categoria"
            android:textColor="@color/gris1"
            android:textSize="10sp"
            app:layout_constraintTop_toBottomOf="@+id/textView15"
            tools:ignore="TextContrastCheck"
            tools:layout_editor_absoluteX="94dp" />
      </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

  </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>